--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
       <div class="modal">
         <button type="button" class="modal-clouse" data-modal-close>
           <svg class="modal-icon" width="18" height="18">
-            <use href="./images/icons.svg#icon-Vector"></use>
+            <use href="./images/icons.svg#icon-modal"></use>
           </svg>
         </button>
       </div>
